--- a/ProjFinalAndroid/app/src/main/res/layout/activity_score_add.xml
+++ b/ProjFinalAndroid/app/src/main/res/layout/activity_score_add.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="@string/win_prompt_edt_tltip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbCongrats" />
@@ -39,7 +39,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="Done"
+        android:text="@string/win_prompt_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
