--- a/ProjFinalAndroid/app/src/main/res/layout/fragment_mastermind_game.xml
+++ b/ProjFinalAndroid/app/src/main/res/layout/fragment_mastermind_game.xml
@@ -26,13 +26,11 @@
 
     <ImageButton
         android:id="@+id/game_btSend"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="291dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
