--- a/ProjFinalAndroid/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjFinalAndroid/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,34 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_high_scores"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_scores" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_new_game"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_new_game" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
 
 </menu>
